# iterated-games

./: .gitignore  README.md  pyproject.toml
docs/: training.md
example_data/: more_poems.jsonl  tiny_poems.jsonl
src/: checkpoints.py  data.py  datums.py  prompts.py  qwen3.py  qwen3_utils.py  repl.py  scoring.py  tinker_check.py  train.py  train_config.py
