[project]
name = "iterative-poetry"
version = "0.0.1"
description = "Iterative poetry and transfer learning"
authors = [
    {name = "Karthik Sethuraman", email = "k.seth1993@gmail.com"},
]
dependencies = [
    "tinker==0.7.0",
    "transformers==4.57.3",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "chz==0.4.0",
    "snowballstemmer==3.0.1",
    "tqdm==4.67.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "mypy==1.19.1",
    "pandas-stubs==1.2.0.58",
    "types-tqdm==4.67.0.20250809",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
format = "ruff format src/"
lint = "ruff check --fix src/"
typecheck = "mypy src/"
tinkercheck = "python src/tinker_check.py"
repl = "python src/repl.py"
train = "python src/train.py"